--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,8 @@
-VITE_API_BASE_URL=http://localhost:5000
+  VITE_API_BASE_URL=http://localhost:5000
+  VITE_apiKey =AIzaSyCGE-Ow-9_6TtPC73JPLNPjw4BuRXDnl84
+  VITE_authDomain =hasaniaalumni.firebaseapp.com
+  VITE_projectId =hasaniaalumni
+  VITE_storageBucket =hasaniaalumni.firebasestorage.app
+  VITE_messagingSenderId =572119118430
+  VITE_appId =1:572119118430:web:d7db08303336ca1fdc3acf
+  VITE_measurementId =G-FSDZ61LNTN
