--- a/package.json
+++ b/package.json
@@ -19,16 +19,19 @@
     "@mui/x-data-grid": "^7.28.2",
     "aos": "^2.3.4",
     "axios": "^1.8.4",
+    "firebase": "^11.6.0",
     "install": "^0.13.0",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "npm": "^11.2.0",
+    "pdf-viewer-reactjs": "^2.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.4.0",
+    "react-simple-captcha": "^9.3.1",
     "sort-by": "^0.0.2",
     "styled-components": "^6.1.16",
     "sweetalert2": "^11.17.2",
