--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,4 @@
-  VITE_API_BASE_URL=http://localhost:5000
+VITE_API_BASE_URL=https://alumni-api.nihonelegant.com
   VITE_apiKey =AIzaSyCGE-Ow-9_6TtPC73JPLNPjw4BuRXDnl84
   VITE_authDomain =hasaniaalumni.firebaseapp.com
   VITE_projectId =hasaniaalumni
